<resources>
    <string name="app_name">funLearning</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Jun Wei's string-->
    <string name="no_account">No Account? <b>Register</b> now</string>
    <string name="got_account">Already have an account? <b>Login</b> now</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="create_your_account">Create Your Account</string>

    <!--Si Hua's string-->
    <!--HTML string-->
    <string name="takeExeButton">Take Exercise</string>
    <string name="showResultButton">Show Result</string>
    <string name="comingSoonText">Coming Soon…</string>
    <string name="numCorrectQues">Number of Correct Question:</string>
    <string name="ansTitle">Answer:</string>
    <string name="nextChapButton">Next Chapter</string>
    <string name="nextExeButton">Next Exercise</string>
    <!--Chapter 1-->
    <string name="htmlChap1Title">Chapter 1 : Introduction to HTML</string>
    <string name="htmlDocSample">HTML Document Sample</string>
    <string name="htmlDocSamplePic">Picture for HTML Document Sample</string>
    <string name="htmlHeadingTitle">HTML Headings</string>
    <string name="htmlHeadingDes">HTML headings are defined with the h1 to h6 tags.\n\nh1 defines the most important heading.\nh6 defines the least important heading.</string>
    <string name="htmlHeadingSamplePic">Picture for HTML Heading Sample</string>
    <string name="htmlParagraphTitle">HTML Paragraph</string>
    <string name="htmlParagraphDes">HTML paragraphs are defined with the p tag:</string>
    <string name="htmlParagraphSamplePic">Picture for HTML Paragraph Sample</string>
    <string name="htmlLinkTitle">HTML Links</string>
    <string name="htmlLinkDes">HTML links are defined with the a tag:</string>
    <string name="htmlLinkSamplePic">Picture for HTML Link Sample</string>
    <string name="htmlImageTitle">HTML Images</string>
    <string name="htmlImageDes">HTML images are defined with the img tag.\n\nThe source file (src), alternative text (alt), width, and height are provided as attributes:</string>
    <string name="htmlImageSamplePic">Picture for HTML Image Sample</string>
    <!--Chapter 2-->
    <string name="htmlChap2Title">Chapter 2 : HTML Attributes</string>
    <string name="htmlWidthHeightTitle">The width and height Attributes</string>
    <string name="htmlWidthHeightDes">The img tag should also contain the width and height attributes, which specifies the width and height of the image (in pixels):</string>
    <string name="htmlWeightHeightSamplePic">Picture for HTML Width Height Sample</string>
    <string name="htmlAltTitle">The alt Attribute</string>
    <string name="htmlAltDes">The required alt attribute for the img tag specifies an alternate text for an image, if the image for some reason cannot be displayed. This can be due to slow connection, or an error in the src attribute, or if the user uses a screen reader. \n\nExample:</string>
    <string name="htmlAltSamplePic">Picture for HTML Alt Sample</string>
    <string name="htmlStyleTitle">The style Attribute</string>
    <string name="htmlStyleDes">The style attribute is used to add styles to an element, such as color, font, size, and more. \n\nExample:</string>
    <string name="htmlStyleSamplePic">Picture for HTML Style Sample</string>
    <string name="htmlChap3Title">Chapter 3</string>
    <!--Chapter 1 Exercise-->
    <string name="Chap1Exe">Exercise 1</string>
    <string name="htmlChap1ExeQ1">1. Which tag defines the most important heading?</string>
    <string name="htmlChap1ExeQ1Opt1">h1</string>
    <string name="htmlChap1ExeQ1Opt2">h6</string>
    <string name="htmlChap1ExeQ1Opt3">h9</string>
    <string name="htmlChap1ExeQ2">2. Heading Quantity</string>
    <string name="htmlChap1ExeQ2Input">EG: 1</string>
    <string name="htmlChap1ExeQ3">3. Choose tag that must contains in HTML Document.</string>
    <string name="htmlChap1ExeQ4">4. Choose correct link tag.</string>
    <string name="htmlChap1ExeQ5">5. Choose correct tag for source file.</string>
    <!--Chapter 2 Exercise-->
    <string name="Chap2Exe">Exercise 2</string>
    <string name="htmlChap2ExeQ1">1. What is Alt for?</string>
    <string name="htmlChap2ExeQ1Opt1">Width for Image</string>
    <string name="htmlChap2ExeQ1Opt2">Alternate Text for Image</string>
    <string name="htmlChap2ExeQ1Opt3">Styles for Element</string>
    <string name="htmlChap2ExeQ2">2. What is Style for?</string>
    <string name="htmlChap2ExeQ2Opt1">Width for Image</string>
    <string name="htmlChap2ExeQ2Opt2">Alternate Text for Image</string>
    <string name="htmlChap2ExeQ2Opt3">Add Styles to Element</string>
    <string name="htmlChap2ExeQ3">3. Choose the correct style format.</string>
    <string name="htmlChap2ExeQ3Checkbox1">style=“color=red”</string>
    <string name="htmlChap2ExeQ3Checkbox2">style=“color:red;”</string>
    <string name="htmlChap2ExeQ3Checkbox3">style=“color:red”</string>
    <string name="htmlChap2ExeQ3Checkbox4">style=“backgroundcolor:blue;”</string>
    <string name="htmlChap2ExeQ4Opt1">True</string>
    <string name="htmlChap2ExeQ4Opt2">False</string>
    <!--C Language-->
    <!--Chapter 1-->
    <string name="CChap1Title">Chapter 1 : Introduction to C Language</string>
    <string name="CChap1WhatIsC">What is C?</string>
    <string name="CChap1WhatIsCDes">C is a general-purpose programming language created by Dennis Ritchie at the Bell Laboratories in 1972.\n\nIt is a very popular language, despite being old.\n\nC is strongly associated with UNIX, as it was developed to write the UNIX operating system.</string>
    <string name="CChap1WhyLearnC">Why Learn C?</string>
    <string name="CChap1WhyLearnCDes">It is one of the most popular programming language in the world\n\nIf you know C, you will have no problem to learn other popular programming languages such as Java, Python, C++, C#, etc, as the syntax is similar\n\nC is very fast, compared to other programming languages, like Java and Python\n\nC is very versatile; it can be used in both applications and technologies</string>
    <!--Chapter 2-->
    <string name="CChap2Title">Chapter 2</string>
    <!--Home (HTML)-->
    <string name="html_chap1">Chapter 1 : Introduction to HTML</string>
    <string name="html_chap1_des">This chapter will show some of the tags that is important for HTML.</string>
    <string name="html_chap2">Chapter 2 : HTML Attributes</string>
    <string name="html_chap2_des">HTML attributes provide additional information about HTML elements.</string>
    <string name="html_chap3">Chapter 3</string>
    <string name="html_chap3_des">Coming Soon...</string>
    <!--Home (C)-->
    <string name="c_chap1">Chapter 1 : Introduction to C Language</string>
    <string name="c_chap1_des">This chapter will show a brief description of the C language.</string>
    <string name="c_chap2">Chapter 2</string>
    <string name="c_chap2_des">Coming Soon...</string>


    <!--Hui Yi's string-->
    <!--Profile-->
    <string name="user_name">Name : %s</string>
    <string name="user_email">Email : %s</string>
    <string name="change_profile_button_text">Change Profile Details</string>
    <string name="logout_button_text">Logout</string>
    <string name="history_title">History</string>
    <string name="html_language_progress">HTML Language Progress</string>
    <string name="c_language_progress">C Language Progress</string>
    <string name="c_lastexercise">Exercise : %s</string>
    <string name="c_lastnotes">Notes : %s</string>
    <string name="html_lastexercise">Exercise : %s</string>
    <string name="html_lastnotes">Notes : %s</string>
    <string name="profile">Profile Pic</string>

    <!--Edit Profile-->
    <string name="enter_new_name">Enter New Name</string>
    <string name="enter_new_email">Enter New Email</string>
    <string name="save_button_text">Save</string>
    <string name="change_password_button">Change Password</string>

    <!--Edit Avatar-->
    <string name="choose_new_avatar">Choose New Avatar :</string>
    <string name="select">SELECT</string>
    <string name="edit_icon">edit icon</string>

    <string name="forgot_password">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="reset_password">Reset Password</string>

    <!-- Navigation Bar-->
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="username">Username</string>



</resources>