<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LessonHTMLChp2Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:id="@+id/HTML_chap2_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/htmlChap2Title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/HTML_width_height_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:text="@string/htmlWidthHeightTitle"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/HTML_chap2_title"
            app:layout_constraintTop_toBottomOf="@+id/HTML_chap2_title" />

        <TextView
            android:id="@+id/HTML_width_height_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/htmlWidthHeightDes"
            app:layout_constraintStart_toStartOf="@+id/HTML_width_height_title"
            app:layout_constraintTop_toBottomOf="@+id/HTML_width_height_title" />

        <ImageView
            android:id="@+id/HTML_doc_sample_pic"
            android:layout_width="365dp"
            android:layout_height="180dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/htmlDocSamplePic"
            app:layout_constraintStart_toStartOf="@+id/HTML_width_height_des"
            app:layout_constraintTop_toBottomOf="@+id/HTML_width_height_des"
            android:src="@drawable/html_width_height_sample" />

        <TextView
            android:id="@+id/HTML_alt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:text="@string/htmlAltTitle"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/HTML_doc_sample_pic"
            app:layout_constraintTop_toBottomOf="@+id/HTML_doc_sample_pic" />

        <TextView
            android:id="@+id/HTML_alt_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/htmlAltDes"
            app:layout_constraintStart_toStartOf="@+id/HTML_alt_title"
            app:layout_constraintTop_toBottomOf="@+id/HTML_alt_title" />

        <ImageView
            android:id="@+id/HTML_alt_example_pic"
            android:layout_width="355dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/htmlAltSamplePic"
            app:layout_constraintStart_toStartOf="@+id/HTML_alt_des"
            app:layout_constraintTop_toBottomOf="@+id/HTML_alt_des"
            android:src="@drawable/html_alt_sample" />

        <TextView
            android:id="@+id/HTML_style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:text="@string/htmlStyleTitle"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/HTML_alt_example_pic"
            app:layout_constraintTop_toBottomOf="@+id/HTML_alt_example_pic" />

        <TextView
            android:id="@+id/HTML_style_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/htmlStyleDes"
            app:layout_constraintStart_toStartOf="@+id/HTML_style_title"
            app:layout_constraintTop_toBottomOf="@+id/HTML_style_title" />

        <ImageView
            android:id="@+id/HTML_style_sample_pic"
            android:layout_width="360dp"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/htmlAltSamplePic"
            app:layout_constraintStart_toStartOf="@+id/HTML_style_des"
            app:layout_constraintTop_toBottomOf="@+id/HTML_style_des"
            android:src="@drawable/html_style_sample" />

        <Button
            android:id="@+id/take_html_exe2_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="#8BC34A"
            android:text="@string/takeExeButton"
            app:layout_constraintStart_toStartOf="@+id/HTML_style_sample_pic"
            app:layout_constraintTop_toBottomOf="@+id/HTML_style_sample_pic" />

        <Button
            android:id="@+id/next_html_chap3_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="204dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#8BC34A"
            android:text="@string/nextChapButton"
            app:layout_constraintStart_toStartOf="@+id/HTML_style_sample_pic"
            app:layout_constraintTop_toBottomOf="@+id/HTML_style_sample_pic" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>